--- a/plugin/src/main/AndroidManifest.xml
+++ b/plugin/src/main/AndroidManifest.xml
@@ -7,19 +7,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
-    <uses-feature android:name="com.theta360.pluginlibrary.activity.PluginActivity" android:required="true" />
-    <uses-feature android:name="com.theta360.pluginlibrary.activity.pluginapi" android:version="1" />
-    <uses-feature android:name="com.theta360.pluginlibrary.callback.KeyCallback" android:required="true" />
-    <uses-feature android:name="com.theta360.pluginlibrary.callback.pluginapi" android:version="1" />
-    <uses-feature android:name="com.theta360.pluginlibrary.receiver.KeyReceiver" android:required="true" />
-    <uses-feature android:name="com.theta360.pluginlibrary.receiver.pluginapi" android:version="1" />
-    <uses-feature android:name="com.theta360.pluginlibrary.values.LedColor" android:required="true" />
-    <uses-feature android:name="com.theta360.pluginlibrary.values.LedTarget" android:required="true" />
-    <uses-feature android:name="com.theta360.pluginlibrary.values.pluginapi" android:version="1" />
+    <uses-feature android:name="com.theta360.receptor.v" android:required="true"/>
+    <uses-feature android:name="com.theta360.receptor.webapi" android:version="2"/>
+    <uses-feature android:name="com.theta360.receptor.mtpapi" android:version="1"/>
+    <uses-feature android:name="com.theta360.receptor.bleapi" android:version="1"/>
+    <uses-feature android:name="com.theta360.receptor.pluginapi" android:version="1"/>
 
-
-    <uses-feature android:name="com.theta360.receptor.v" android:required="true" />
-    <uses-feature android:name="com.theta360.receptor.pluginapi" android:version="1" />
 
     <application
         android:allowBackup="true"
