--- a/plugin/src/main/AndroidManifest.xml
+++ b/plugin/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-feature android:name="com.theta360.receptor.mtpapi" android:version="1"/>
     <uses-feature android:name="com.theta360.receptor.bleapi" android:version="1"/>
     <uses-feature android:name="com.theta360.receptor.pluginapi" android:version="1"/>
+    <uses-feature android:name="com.theta360.receptor.z1" android:required="false"/>
 
 
     <application
